ADD_CUSTOM_TARGET(mkdoc-modular-class
	DEPENDS	${CMAKE_CURRENT_SOURCE_DIR}/docgen.py
)

ADD_CUSTOM_COMMAND(
	TARGET mkdoc-modular-class
	COMMAND ./docgen.py
	WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
)

FILE(GLOB modular_html "${CMAKE_CURRENT_SOURCE_DIR}/*.html")
INSTALL(FILES ${modular_html}
  DESTINATION    doc
)
