ADD_CUSTOM_TARGET(mkdoc ALL
	DEPENDS	${CMAKE_CURRENT_SOURCE_DIR}/docgen.py
)

ADD_CUSTOM_COMMAND(
	COMMAND cp
	ARGS -f ${CMAKE_CURRENT_SOURCE_DIR}/*.py .
	TARGET mkdoc
)

ADD_CUSTOM_COMMAND(
	COMMAND ./docgen.py
	TARGET mkdoc
)

FILE(GLOB modular_html "${CMAKE_CURRENT_SOURCE_DIR}/*.html")
INSTALL(FILES ${modular_html}
  DESTINATION    doc
)
