LINK_LIBRARIES(EM2)

ADD_EXECUTABLE(blankimg blankimg.cpp)
ADD_EXECUTABLE(fft fft.cpp)
ADD_EXECUTABLE(radial_dist radial_dist.cpp)
ADD_EXECUTABLE(locations locations.cpp)
ADD_EXECUTABLE(image_overwrite image_overwrite.cpp)
ADD_EXECUTABLE(rotate rotate.cpp)
ADD_EXECUTABLE(rotate_translate rotate_translate.cpp)
ADD_EXECUTABLE(rotate_phi rotate_phi.cpp)
ADD_EXECUTABLE(ccf2 ccf2.cpp)
ADD_EXECUTABLE(shared_data shared_data.cpp)

FIND_LIBRARY(EMAN1_LIBRARY NAMES EM PATHS $ENV{EMANDIR}/lib $ENV{HOME}/EMAN/lib)
IF(EMAN1_LIBRARY)
	FIND_PATH(EMAN1_INCLUDE_PATH EMData.h $ENV{EMANDIR}/include $ENV{HOME}/EMAN/include)	
	IF(EMAN1_INCLUDE_PATH)
		ADD_EXECUTABLE(emdata_api emdata_api.cpp)
		ADD_EXECUTABLE(rotate1 rotate1.cpp)
		ADD_EXECUTABLE(ccf1 ccf1.cpp)
		
		TARGET_LINK_LIBRARIES(emdata_api ${EMAN1_LIBRARY})
		TARGET_LINK_LIBRARIES(rotate1 ${EMAN1_LIBRARY})
		TARGET_LINK_LIBRARIES(ccf1 ${EMAN1_LIBRARY})
		
		INCLUDE_DIRECTORIES(${EMAN1_INCLUDE_PATH})
	ENDIF(EMAN1_INCLUDE_PATH)
ENDIF(EMAN1_LIBRARY)
