#LINK_LIBRARIES(GLEM2)
LINK_LIBRARIES(EM2)

# all of these commented out by david woolford, because when i started writing testing code
# none of them where being compile anyway...
#ADD_EXECUTABLE(blankimg blankimg.cpp)
#ADD_EXECUTABLE(fft fft.cpp)
#ADD_EXECUTABLE(rotate rotate.cpp)
#ADD_EXECUTABLE(rotate_translate rotate_translate.cpp)
#ADD_EXECUTABLE(rotate_phi rotate_phi.cpp)
#ADD_EXECUTABLE(ccf2 ccf2.cpp)
#ADD_EXECUTABLE(testalign testalign.cpp)
#ADD_EXECUTABLE(testpolardata testpolardata.cpp)
#ADD_EXECUTABLE(fft_test fft_test.cpp)
#ADD_EXECUTABLE(projector_test projector_test.cpp)
ADD_EXECUTABLE(mem_test mem_test.cpp)
#ADD_EXECUTABLE(storage_order_test storage_order_test.cpp)
#ADD_EXECUTABLE(randnum_test randnum_test.cpp)
# this test added by david woolford - it should be executed and results evaluated on every platform.
#ADD_EXECUTABLE(test_emobject_and_dict test_emobject.cpp)
#ADD_EXECUTABLE(imagic_ctf_test imagic_ctf_test.cpp)
#ADD_EXECUTABLE(memtest memtest.cpp)
#ADD_EXECUTABLE(memtest2 memtest2.cpp)
#ADD_EXECUTABLE(ccf3 ccf3.cpp)
#ADD_EXECUTABLE(transform transform.cpp)

#FIND_LIBRARY(EMAN1_LIBRARY NAMES EM PATHS $ENV{EMANDIR}/lib $ENV{HOME}/EMAN/lib)
#IF(EMAN1_LIBRARY)
#	FIND_PATH(EMAN1_INCLUDE_PATH EMData.h $ENV{EMANDIR}/include $ENV{HOME}/EMAN/include)	
#	IF(EMAN1_INCLUDE_PATH)
		#ADD_EXECUTABLE(emdata_api emdata_api.cpp)
		#ADD_EXECUTABLE(rotate1 rotate1.cpp)
		#ADD_EXECUTABLE(ccf1 ccf1.cpp)
		#TARGET_LINK_LIBRARIES(emdata_api ${EMAN1_LIBRARY})
		#TARGET_LINK_LIBRARIES(rotate1 ${EMAN1_LIBRARY})
		#TARGET_LINK_LIBRARIES(ccf1 ${EMAN1_LIBRARY})        
        
		#INCLUDE_DIRECTORIES(${EMAN1_INCLUDE_PATH})
#	ENDIF(EMAN1_INCLUDE_PATH)
#ENDIF(EMAN1_LIBRARY)
